# PersonFollowingRobot

./: README.md  Robot.py  RobotDB.py  download_model.py  my_strongsort.py  torchreid_embedding.py
my_robot_launch/: CMakeLists.txt  package.xml  person_controller.py  setup.cfg  setup.py
my_robot_launch/bridge/: person_bridge.yaml
my_robot_launch/launch/: robot.launch.py
my_robot_launch/my_robot_launch/: actor_controller.py
my_robot_launch/scripts/: camera_node.py  recorder_node.py  robot.launch.py
my_robot_launch/scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_robot_launch/scripts/log/: latest_build
my_robot_launch/worlds/: actor_test.world  person.world  person_world.sdf  walk.world
person_following_pkg/: package.xml
person_following_pkg/person_following_pkg/: RobotDB.py  download_model.py  my_strongsort.py  person_following_node.py
