<?xml version="1.0"?>
<package format="3">
  <name>my_robot_launch</name>
  <version>0.0.0</version>
  <description>Launch files and actor controller for my robot</description>
  <maintainer email="mhadhbirim123@gmail.com">Rym Mhadbi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
