<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>person_following_pkg</name>
  <version>0.0.1</version>
  <description>Person following robot with detection and recording</description>
  <maintainer email="rym@todo.todo">Rym Mhadhbi</maintainer>
  <license>MIT</license>

  <!-- Dépendances runtime -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>torch</exec_depend>
  <exec_depend>facenet-pytorch</exec_depend>
  <exec_depend>ultralytics</exec_depend>
  <exec_depend>torchreid</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>Pillow</exec_depend>

  <!-- Dépendances pour tests -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

